[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "nfs-js"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2" , default-features = false, features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
] }
napi-derive = { version = "2" }
serde_json = "1.0.82"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
