[package]
authors = ["LongYinan <lynweklm@gmail.com>","Tryggvi Larusson <Tryggvi.Larusson@netapp.com>","Fridvin Oddbjornsson <Fridvin.Oddbjornsson@netapp.com>"]
edition = "2021"
name = "nfs-js"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libnfs = { version = "0.1.0", path = "./libnfs-rs" }
mime_guess = "2.0.4"
napi = { version = "2" , default-features = false, features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
] }
napi-derive = { version = "2" }
nix = "0.23.0"
send_wrapper = "0.6.0"
serde_json = "1.0.82"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
