[package]
authors = ["LongYinan <lynweklm@gmail.com>","Tryggvi Larusson <Tryggvi.Larusson@netapp.com>","Fridvin Oddbjornsson <Fridvin.Oddbjornsson@netapp.com>"]
edition = "2021"
name = "nfs-js"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.8.0"
libnfs = { version = "0.1.2", path = "./libnfs-rs" }
nfs-rs = { version = "0.1.0", path = "./nfs-rs" }
mime_guess = "2.0.4"
napi = { version = "~2.16.13" , default-features = false, features = [
  "napi8",
  "async",
  "latin1",
] }
napi-derive = { version = "~2.16.12" }
nix = { version = "0.29.0", features = ["fs"] }
send_wrapper = "0.6.0"
serde_json = "1.0.132"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
